variables.RunHalf.scala.error
Erreur de compilation :
RunHalf:10: error: '(' expected but integer literal found.
  if 2 * (biscuit != caseOrange + 1) {
     ^RunHalf:13: error: illegal start of simple expression
}
^